Added:Individual Components for GetAPI and GetByParameterAPI

--- a/src/app/movie/home/home.component.html
+++ b/src/app/movie/home/home.component.html
@@ -33,7 +33,9 @@
           </div>
       </div>
   </div>
+
   
-
-
+  
+<!-- <app-get-data-by-parameter-rest-api></app-get-data-by-parameter-rest-api> -->
+<!-- <app-get-data-rest-api></app-get-data-rest-api> -->
 
