--- a/src/app/movie/upcoming/upcoming.component.html
+++ b/src/app/movie/upcoming/upcoming.component.html
@@ -5,7 +5,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a routerLink="home" ><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon></a></li>
         <li><a routerLink="current" >NOW PLAYING</a></li>
-        <li><a routerLink="upcoming" routerLinkActive="active">UPCOMING</a></li>
+        <li><a routerLink="">UPCOMING</a></li>
         <li><a routerLink="#" >LATEST</a></li>
       </ul>
       <form class="navbar-form navbar-right" >
