Added:Display data into respective components

--- a/src/app/movie/home/home.component.css
+++ b/src/app/movie/home/home.component.css
@@ -2,4 +2,12 @@
     max-width: 400px;
   }
   
+  .img-size{
+    width:100%;
+  }
+
+  /* .d-flex{
+    display: flex;
+    flex-direction: row;
+  } */
   
