--- a/src/app/movie/movie-detail/movie-detail.component.html
+++ b/src/app/movie/movie-detail/movie-detail.component.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-inverse">
+<!-- <nav class="navbar navbar-inverse">
   <div class="container-fluid">
 
     <ul class="nav navbar-nav">
@@ -14,7 +14,8 @@
       </div>
     </form>
   </div>
-</nav>
+</nav> -->
+<app-nav-bar></app-nav-bar>
 
 <div class="container">
   <div class="row py-15">
