--- a/src/app/movie/nowplaying/nowplaying.component.html
+++ b/src/app/movie/nowplaying/nowplaying.component.html
@@ -1,12 +1,12 @@
 <!-- <p>nowplaying works!</p> -->
-<nav class="navbar navbar-inverse">
+<!-- <nav class="navbar navbar-inverse">
     <div class="container-fluid">
 
       <ul class="nav navbar-nav">
         <li class="active"><a routerLink="home" ><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon></a></li>
         <li><a routerLink="current" routerLinkActive="active">NOW PLAYING</a></li>
         <li><a routerLink="upcoming">UPCOMING</a></li>
-        <li><a routerLink="#" >LATEST</a></li>
+        <li><a routerLink="latest" >LATEST</a></li>
       </ul>
       <form class="navbar-form navbar-right" >
         <div class="form-group">
@@ -14,17 +14,18 @@
         </div>
       </form>
     </div>
-  </nav>
+  </nav> -->
+  <app-nav-bar></app-nav-bar>
 
   <div class="container">
     <div class="row">
         <div class="col-md-3 col-sm-4">
-          <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card class="example-card" *ngFor="let current of listofNowPlaying">
+              <img mat-card-image src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/{{current.backdrop_path}}" alt="Photo of a Shiba Inu">
               <mat-card-content>
-                <p>
-                  Movie name3 will be here
-                </p>
+                <h2>
+                  {{current.original_title}}
+                </h2>
               </mat-card-content>
               <mat-card-actions>
                 <button mat-button><a routerLink="movieDetail">More Detail</a></button>
