--- a/src/app/movie/upcoming/upcoming.component.html
+++ b/src/app/movie/upcoming/upcoming.component.html
@@ -1,5 +1,5 @@
 <!-- <p>upcoming works!</p> -->
-<nav class="navbar navbar-inverse">
+<!-- <nav class="navbar navbar-inverse">
     <div class="container-fluid">
 
       <ul class="nav navbar-nav">
@@ -14,17 +14,18 @@
         </div>
       </form>
     </div>
-  </nav>
+  </nav> -->
+  <app-nav-bar></app-nav-bar>
 
   <div class="container">
     <div class="row">
         <div class="col-md-3 col-sm-4">
-          <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card class="example-card" *ngFor="let upcoming of listofUpcoming">
+              <img mat-card-image src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/{{upcoming.backdrop_path}}" alt="Photo of a Shiba Inu">
               <mat-card-content>
-                <p>
-                  Movie name4 will be here
-                </p>
+                <h2>
+                   {{upcoming.original_title}}
+                </h2>
               </mat-card-content>
               <mat-card-actions>
                 <button mat-button><a routerLink="movieDetail">More Detail</a></button>
