--- a/src/app/movie/latest/latest.component.html
+++ b/src/app/movie/latest/latest.component.html
@@ -1,24 +1,8 @@
-<!-- <p>latest works!</p> -->
-<!-- <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
 
-      <ul class="nav navbar-nav">
-        <li ><a routerLink="home" routerLinkActive="active"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon></a></li>
-        <li><a routerLink="current">NOW PLAYING</a></li>
-        <li><a routerLink="upcoming">UPCOMING</a></li>
-        <li><a routerLink="latest" >LATEST</a></li>
-      </ul>
-      <form class="navbar-form navbar-right" >
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-      </form>
-    </div>
-  </nav> -->
 
   <app-nav-bar></app-nav-bar>
 
-  <div class="container">
+  <!-- <div class="container">
     <div class="row">
         <div class="col-md-3 col-sm-4">
           <mat-card class="example-card" *ngFor="let latest of listofLatest">
@@ -34,4 +18,18 @@
             </mat-card>
         </div>
     </div>
+</div> -->
+
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-3 mt-3 mb-3" *ngFor="let latest of listofLatest">
+      <div class="box">
+      <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/{{latest.backdrop_path}}" width="100%">
+      <h2 class="mt-3 mb-3"> {{latest.original_title}} </h2>
+      <a class="btn btn-dark btn-sm" routerLink="movieDetail">More Details</a>
+      </div>
+      
+    </div>
+  </div>
 </div>
