--- a/src/app/movie/latest/latest.component.html
+++ b/src/app/movie/latest/latest.component.html
@@ -22,14 +22,58 @@
 
 
 <div class="container-fluid">
-  <div class="row">
+  <div class="row" *ngIf="res; else noLatest">
     <div class="col-lg-3 mt-3 mb-3" *ngFor="let latest of listofLatest">
+      
       <div class="box">
       <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/{{latest.backdrop_path}}" width="100%">
       <h2 class="mt-3 mb-3"> {{latest.original_title}} </h2>
       <a class="btn btn-dark btn-sm" routerLink="movieDetail">More Details</a>
       </div>
       
+      <ng-template *ngIf="latest.length==0;else noLatest">
+        <p>I m in latest</p>
+    </ng-template>
+    
+    <ng-template #noLatest >
+      <div class="container">
+        <div class="row">
+            <div class="col-lg-3 mt-3 mb-3">
+              <mat-card class="example-card">
+                  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+                  <mat-card-content>
+                    <h2>
+                     Movie name
+                    </h2>
+                  </mat-card-content>
+                  <mat-card-actions>
+                    <button mat-button><a routerLink="movieDetail">More Detail</a></button>
+                  </mat-card-actions>
+                </mat-card>
+            </div>
+        </div>
+    </div> 
+    </ng-template>
     </div>
   </div>
 </div>
+
+<ng-template #noLatest>
+  <div class="container">
+    <div class="row">
+        <div class="col-lg-3 mt-3 mb-3">
+          <mat-card class="example-card">
+              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <mat-card-content>
+                <h2>
+                 Movie name
+                </h2>
+              </mat-card-content>
+              <mat-card-actions>
+                <button mat-button><a routerLink="movieDetail">More Detail</a></button>
+              </mat-card-actions>
+            </mat-card>
+        </div>
+    </div>
+</div> 
+</ng-template>
