--- a/src/app/movie/nav-bar/nav-bar.component.html
+++ b/src/app/movie/nav-bar/nav-bar.component.html
@@ -3,10 +3,10 @@
     <div class="container-fluid">
 
       <ul class="nav navbar-nav">
-        <li><a routerLink="home" routerLinkActive="active"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon></a></li>
-        <li><a routerLink="current">NOW PLAYING</a></li>
-        <li><a routerLink="upcoming">UPCOMING</a></li>
-        <li><a routerLink="latest">LATEST</a></li>
+        <li><a routerLink="/home" routerLinkActive="active"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon></a></li>
+        <li><a routerLink="/current">NOW PLAYING</a></li>
+        <li><a routerLink="/upcoming">UPCOMING</a></li>
+        <li><a routerLink="/latest">LATEST</a></li>
       </ul>
       <form class="navbar-form navbar-right" >
         <div class="form-group">
