--- a/src/app/movie/nowplaying/nowplaying.component.html
+++ b/src/app/movie/nowplaying/nowplaying.component.html
@@ -25,7 +25,7 @@
       <div class="box">
       <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/{{current.backdrop_path}}" width="100%">
       <h2 class="mt-3 mb-3"> {{current.original_title}} </h2>
-      <a class="btn btn-dark btn-sm" routerLink="movieDetail">More Details</a>
+      <a class="btn btn-dark btn-sm" routerLink="/movieDetail">More Details</a>
     </div>
     </div>
   </div>
