--- a/src/app/movie/movie-detail/movie-detail.component.html
+++ b/src/app/movie/movie-detail/movie-detail.component.html
@@ -3,10 +3,10 @@
 <app-nav-bar></app-nav-bar>
 
 <div class="container">
-  <div class="row py-15">
+  <div class="row py-15 mb-25" *ngFor="let mv of movieDetails">
     <div class="col-md-3">
       <mat-card class="example-card">
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <img mat-card-image src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/{{mv.backdrop_path}}" alt="Photo of a Shiba Inu">
         </mat-card>
     </div>
     <div class="col-md-9">
@@ -14,11 +14,11 @@
         <mat-card-content>
 
           <div class="jumbotron">
-            <h1 class="display-4">Movie title </h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <h1 class="display-4">{{mv.title}} </h1>
+            <!-- <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p> -->
             <hr class="my-4">
             <h4 class="display-4">Release</h4>
-            <p>Release info will take place here.</p>
+            <p>{{mv.release_date}}</p>
             <h2 class="display-4">Language Spoken:</h2>
             <p>Language will take place here.</p>
             <h2 class="display-4">Production Countries:</h2>
@@ -29,7 +29,7 @@
           <div class="jumbotron ">
             <div class="container">
               <h2 class="display-4">Description</h2>
-              <p >Description will take place here.</p>
+              <p>{{mv.overview}}</p>
             </div>
           </div>
         </mat-card-content>
