--- a/src/app/movie/home/home.component.html
+++ b/src/app/movie/home/home.component.html
@@ -1,4 +1,5 @@
 <!-- <p>home works!</p> -->
+
 <!-- <nav class="navbar navbar-inverse">
     <div class="container-fluid">
 
@@ -9,33 +10,19 @@
         <li><a routerLink="latest">LATEST</a></li>
       </ul>
       <form class="navbar-form navbar-right" >
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+        <div class="form-group" *ngFor="let item of items | searchFilter: searchTerm" >
+          <input type="text" class="form-control" placeholder="Search" name="searchTerm" [(ngModel)]="searchTerm">
+          <p>{{item.title}}</p>
         </div>
       </form>
     </div>
   </nav> -->
+  
+ 
   <app-nav-bar></app-nav-bar>
-
-  <!-- <div class="container">
-      <div class="row justify-content-md-center" >
-          <div class="col-md-3 d-flex">
-            <mat-card class="example-card" *ngFor = "let item of items" >
-                <img mat-card-image src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/{{item.backdrop_path}}"  alt="Photo of a Shiba Inu">
-                <mat-card-content>
-                  <h2> {{item.original_title}} </h2>
-                </mat-card-content>
-                <mat-card-actions>
-                  <button mat-button><a routerLink="movieDetail">More Detail</a></button>
-                </mat-card-actions>
-              </mat-card>
-          </div>
-      </div>
-  </div> -->
-
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-lg-3 mt-3 mb-3" *ngFor = "let item of items">
+    <div class="row" *ngFor = "let item of items">
+      <div class="col-lg-3 mt-3 mb-3" >
         <div class="box">
         <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/{{item.backdrop_path}}" width="100%">
         <h2 class="mt-3 mb-3"> {{item.original_title}} </h2>
